realizando ajustes do pull
